v0.5.4 fixed problem with layout